--- a/index.html
+++ b/index.html
@@ -6,51 +6,59 @@
     <title>A history of browsers</title>
     <link rel="stylesheet" href="style.css"/>
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </head>
 <body>
-    <h1>A history of broswers</h1>
+   
 
-<div id="toc"> <ul>
-        <li><a href="#Intro">Introduction</a></li>
-        <li><a href="#IE">Internet Explorer</a></li>
-        <li><a href="#Firefox">Firefox</a></li>
-        <li><a href="#Chrome">Chrome</a></li>
+<div id="navbar" class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark"> 
+        <div class="container-fluid d-flex justify-content-evenly">
+        <li><a class="nav-link" href="#Intro">Introduction</a></li>
+        <li><a class="nav-link" href="#IE">Internet Explorer</a></li>
+        <li><a class="nav-link" href="#Firefox">Firefox</a></li>
+        <li><a class="nav-link" href="#Chrome">Chrome</a></li>
 
-    </ul></div>
+   </div></div>
 
+   <div class="container mt-4 pt-5">
+   <h1>A history of broswers</h1>
 
     <h2><a name="Intro">Introduction</a></h2>
     <p>The first web browser was invented in 1990 by <a href="https://www.w3.org/People/Berners-Lee/">Tim Berners-Lee.</a> It was called WorldWideWeb (no spaces) and was later renamed Nexus. In 1993, Marc Andreesen created a browser that was easy to use and install with the release of Mosaic (later Netscape), "the world's first popular browser", which made the World Wide Web system easy to use and more accessible to the average person. Andreesen's browser sparked the internet boom of the 1990s. These are the two major milestones in the history of the Web.
 
 The wars put the Web in the hands of millions of ordinary PC users, but showed how commercialization of the Web could stymie standards efforts. Both Microsoft and Netscape liberally incorporated proprietary extensions to HTML in their products, and tried to gain an edge by product differentiation, leading to the acceptance of the Cascading Style Sheets proposed by Hakon Wium Lie over Netscape's JavaScript Style Sheets (JSSS) by W3C.</p>
 
-<div class="left"> <h2><a name="IE">A brief history of IE</a></h2>
+<div class="row">
+<div class="col"> <h2><a name="IE">A brief history of IE</a></h2>
 
-        <img src="https://upload.wikimedia.org/wikipedia/commons/1/18/Internet_Explorer_10%2B11_logo.svg"width="100px"/>
+        <img class="float-start" src="https://upload.wikimedia.org/wikipedia/commons/1/18/Internet_Explorer_10%2B11_logo.svg"width="100px"/>
 
     <p>The first Internet Explorer was derived from Spyglass Mosaic. The original Mosaic came from <a href="https://www.ncsa.illinois.edu/">NCSA</a>, but since NCSA was a public entity it relied on Spyglass as its commercial licensing partner. Spyglass in turn delivered two versions of the Mosaic browser to Microsoft, one wholly based on the NCSA source code, and another engineered from scratch but conceptually modeled on the NCSA browser. Internet Explorer was initially built using the Spyglass, not the NCSA source code. The license to Microsoft provided Spyglass (and thus NCSA) with a quarterly fee plus a percentage of Microsoft's revenues for the software.
 
         In March 2009 Version 8.0 was released, with the first public beta having been released on March 5, 2008. IE8 offered better support for web standards than previous versions, with plans for improved support for RSS, CSS, and Ajax, as well as full compliance for Cascading Style Sheets 2.1. It was also the first version to successfully pass the Acid2 test. In addition, Internet Explorer 8 included new features such as WebSlices and an improved phishing filter.
         </p></div>
 
- <div class="right"> <h2><a name="Firefox">A brief history of Firefox</a></h2>
+ <div class="col"> <h2><a name="Firefox">A brief history of Firefox</a></h2>
 
-    <img src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png"width="100px"/>
+    <img class="float-start" src="http://upload.wikimedia.org/wikipedia/commons/f/ff/Mozilla_Firefox_logo_2013.png"width="100px"/>
 
     <p>The project which became <a href="https://www.mozilla.org/en-US/firefox/new/">Firefox</a> a started as an experimental branch of the Mozilla Suite called m/b (or mozilla/browser). After it had been sufficiently developed, binaries for public testing appeared in September 2002 under the name Phoenix.
 
         Firefox 23 was released on August 6, 2013. It includes an updated Firefox logo, mixed content blocking enabled by default to defend against man-in-the-middle attacks, implementation of the range form control attribute in HTML5, dropping support for the blink HTML element as well as text-decoration:blink CSS element, the restriction to have to "switch to a different search provider across the entire browser," and a global browser console, a new network monitor among other things.
         </p></div>
 
-<div class="center">  <h2><a name="Chrome">A brief history of Chrome</a></h2>
+<div class="col">  <h2><a name="Chrome">A brief history of Chrome</a></h2>
 
-    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Google_Chrome_icon_%28February_2022%29.svg"width="100px"/>
+    <img class="float-start" src="https://upload.wikimedia.org/wikipedia/commons/e/e1/Google_Chrome_icon_%28February_2022%29.svg"width="100px"/>
 
     <p>Google's <a href="https://en.wikipedia.org/wiki/Eric_Schmidt">Eric Schmidt</a> opposed the development of an independent web browser for six years. He stated that "at the time, Google was a small company," and he did not want to go through "bruising browser wars." After co-founders Sergey Brin and Larry Page hired several Mozilla Firefox developers and built a demonstration of Chrome, however, Schmidt admitted that "It was so good that it essentially forced me to change my mind."
 
         In December 2010 Google announced that to make it easier for businesses to use Chrome they would provide an official Chrome MSI package. For business use it is helpful to have full-fledged MSI packages that can be customized via transform files (.mst) - but the MSI provided with Chrome is only a very limited MSI wrapper fitted around the normal installer, and many businesses find that this arrangement does not meet their needs.
         </p> </div>
-
+    </div>
+</div>
+    
 
 </body>
 </html>
